Clean up (for a better Performance)